# Volt

./: README.md
Projet Voltaire/: CMakeLists.txt  common_types.h
Projet Voltaire/src/base/: base.cpp  base.h
Projet Voltaire/src/base/main/: main.cpp  main.h
Projet Voltaire/src/base/platform/: platform.h  platform_mac.cpp  platform_win.cpp
Projet Voltaire/src/base/screen/: screen.cpp  screen.h  screen_mac.cpp  screen_win.cpp
Projet Voltaire/src/base/tesseract/: extract.cpp
